Add styles to personal website

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,30 @@ img {
     width: 100%;
     
 }
+.container {
+    display: flex;
+    flex-direction:column;
+}
+.gtr {
+    color: white;
+    font-family: cursive;
+    font-size: 75px;
+   margin-top: -350px;
+    margin-bottom: 204px;
+    margin-right: 1100px;
+    text-align: center;
+    
+    
+}
+.Ferrari {
+    color: white;
+    font-family: cursive;
+    font-size: 90px;
+    margin-top: -240px;
+    margin-bottom: 74px;
+    
+}
+
 body {
     text-align: center;
     background-color: white;
