Add styling to personal website

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@ img {
     display: flex;
     flex-direction:column;
 }
+
+.motors {
+    text-align: center;
+    color: red;
+    margin-right: -133px
+}
+
 .gtr {
     color: white;
     font-family: cursive;
